server/compilers/goLiteJS/src/test/ml2/invalid/ml2funcTypeVardecl.go
package main

func main(a int, int b) {
    var a int
    var b c

}
